Delete a redundant file. Made the swagger documentation the default endpoint.
